--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
         <title>JS Ninja</title>
     </head>
     <body>
-        <script src="./aula-15.js">
-            
+        <a id="my-link">Este é o meu link</a>
+        <h2 class="my-class">Este é o meu texto</h2>
+        <h4>Esta é minha tag</h4>
+        <script src="./aula-20.js">  
         </script>
     </body>
 </html>
