--- a/index.html
+++ b/index.html
@@ -5,10 +5,16 @@
         <title>JS Ninja</title>
     </head>
     <body>
-        <a id="my-link">Este é o meu link</a>
+        <!-- <a id="my-link">Este é o meu link</a>
         <h2 class="my-class">Este é o meu texto</h2>
-        <h4>Esta é minha tag</h4>
-        <script src="./aula-20.js">  
-        </script>
+        <h4>Esta é minha tag</h4> -->
+
+        <form action="/" method="GET">
+            <input type="text" name="username" class="input" id="username"/>
+            <input type="password" name="password" class="input" id="password"/>
+            <button type="submit" class="button" id="button"> Enviar </button>
+        </form>
+
+        <script src="./aula-20.js"></script>
     </body>
 </html>
