--- a/aula-30.html
+++ b/aula-30.html
@@ -3,9 +3,23 @@
     <head>
         <meta charset="UTF-8">
         <title>Aula 29</title>
+
+        <style>
+            .container {
+                height: 100px;
+                width: 100px;
+                background: green;
+            }
+            .red {
+                background: red;
+            }
+            .yellow {
+                background: yellow;
+            }
+        </style>
     </head>
     <body>
-        <input data-js="inputExemplo" />
+        <div class='container'></div>
         <script src="./libs/dom.js"></script>
         <script src="./aula-30.js"></script>
     </body>
